OnboardingV2Minimal/force-app/main/default/objects/Vendor_Onboarding_Eligibility_Rule__mdt/Vendor_Onboarding_Eligibility_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Vendor Onboarding Eligibility Rule</label>
    <pluralLabel>Vendor Onboarding Eligibility Rules</pluralLabel>
</CustomObject>