OnboardingV2Minimal/force-app/main/default/objects/Vendor_Onboarding_Eligibility_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Only active records are used by the eligibility engine. Inactive records are ignored.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>