OnboardingV2Minimal/force-app/main/default/objects/Vendor_Onboarding_Eligibility_Rule__mdt/fields/Block_Mode__c.field-meta.xml
<CustomField>
    <fullName>Block_Mode__c</fullName>
    <inlineHelpText>Block Same Program: hides only the same vendor program (same retail option). Block Vendor On Any Complete: hides all programs for this vendor when any onboarding is in a completed status.</inlineHelpText>
    <label>Block Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Block Same Program</fullName>
                <default>true</default>
                <label>Block Same Program</label>
            </value>
            <value>
                <fullName>Block Vendor On Any Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>