OnboardingV2Minimal/force-app/main/default/objects/Vendor_Onboarding_Eligibility_Rule__mdt/fields/Use_Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Use_Prerequisites__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, Vendor Program Group and Group Member prerequisite logic is enforced for this vendor. If unchecked, prerequisite gating is skipped.</inlineHelpText>
    <label>Use Prerequisites</label>
    <type>Checkbox</type>
</CustomField>