OnboardingV2Minimal/force-app/main/default/objects/Vendor_Onboarding_Eligibility_Rule__mdt/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <inlineHelpText>Exact Vendor__c.Name this rule applies to. Match is case-insensitive. Keep one active rule per vendor.</inlineHelpText>
    <label>Vendor Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>